--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 body {
   font-family: Arial, sans-serif;
   line-height: 1.5;
-  background-color: #f8f8f8;
+  background-color: #313131;
 }
 
 a {
